Issue 6693: Misaligned input boxes in command line
https://code.google.com/p/fbug/issues/detail?id=6693

--- a/extension/skin/classic/firebug.css
+++ b/extension/skin/classic/firebug.css
@@ -105,7 +105,6 @@
     position: absolute;
     z-index: 1;
     color: #A0A0A0;
-    bottom: 0;
     pointer-events: none;
 }
 
